Segunda entrega final

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="header" href="css/estilos.css">
-        <img src="imagenes/logodfgl-removebg-preview.png" alt="logo" > 
+        <img class="logologo" src="imagenes/logodfgl-removebg-preview.png" alt="logo" > 
         <a href="#" class="hamburguesa">
             -
         </a>
@@ -32,37 +32,21 @@
     <h1 class="titulo"> DELGADO | FERRER | GONZALEZ LEAHY</h1>
     <h2 class="subtitulo">ABOGADOS</h2>
     <section>
-        
-        <div class="container">    
-                <div class="row">
+        <div class="container">
+            <div class="grid">
+                <img class="imagen" src="imagenes/DFGL-47.jpg" alt="fotoestudiodfgl">
+            </div>
+            <div class="principal">
+                <div class="transform-translate16">
+                    <p>
+                        El reconocimiento de nuestro estudio de abogados es el resultado de una trayectoria profesional altamente cualificada, por el trabajo eficiente, la dedicación e integridad en los servicios prestados.
+                    </p>
+                    <p>
+                        Desde nuestros inicios, mantenemos un compromiso de continua superación, lo que nos ha permitido alcanzar la confianza y satisfacción de nuestros clientes a través de los años.
+                    </p>
                 </div>
-                <div class="container">
-                    <div class="row">
-                      <div class="col">
-                        <div class="grid">
-                            <img class="imagen" src="imagenes/DFGL-47.jpg" alt="fotoestudiodfgl" width="500" height="300" >
-                        </div>
-                      </div>
-                      <div class="col">
-                        <div class="principal">
-                            <h4 class="grid_1" class="fw-bolder">El reconocimiento de nuestro estudio de abogados es el resultado
-                                <br>
-                                de una trayectoria profesional altamente cualificada, por el trabajo eficiente, 
-                                <br>
-                                la dedicación e integridad en los servicios prestados.
-                                <br>
-                                Desde nuestros inicios, mantenemos un compromiso de continua superación,
-                                <br> 
-                                lo que nos ha permitido alcanzar la confianza y satisfacción de nuestros 
-                                <br> 
-                                clientes a través de los años.
-                            </h4>
-                        </div> 
-                      </div>
-                      
-                    </div>
-                  </div>                
-        </div    
+            </div>
+        </div>
     </section>   
 
     <div class="grid_footer">
