--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <header class="header" href="css/estilos.css">
-    <img src="../imagenes/logodfgl-removebg-preview.png" alt="logo"> 
+    <img class="logologo" src="../imagenes/logodfgl-removebg-preview.png" alt="logo"> 
     <a href="#" class="hamburguesa">
-        👏🏼
+        --
     </a>
-    <nav>
+    <nav class="nav">
         <ul class="lista">
             <li><a href="../index.html"> Inicio</a></li>
             <li><a href="estudio.html"> Estudio</a></li>
@@ -58,7 +58,7 @@
             
             <div class="col">
                 <div class="grid_contacto">
-                    <div class="contacto"> 
+                    <div  class="transform-translate15"> 
                         <h3>OTRAS FORMAS DE CONTACTO</h3>
                         <div>
                             <img src="../imagenes/telefono.png" alt="logotelefono" width="25" height="25"> 54 351 4222722 | 4224169
