--- a/index.html
+++ b/index.html
@@ -37,14 +37,12 @@
                 <img class="imagen" src="imagenes/DFGL-47.jpg" alt="fotoestudiodfgl">
             </div>
             <div class="principal">
-                <div class="transform-translate16">
-                    <p>
-                        El reconocimiento de nuestro estudio de abogados es el resultado de una trayectoria profesional altamente cualificada, por el trabajo eficiente, la dedicación e integridad en los servicios prestados.
-                    </p>
-                    <p>
-                        Desde nuestros inicios, mantenemos un compromiso de continua superación, lo que nos ha permitido alcanzar la confianza y satisfacción de nuestros clientes a través de los años.
-                    </p>
-                </div>
+                <p>
+                    El reconocimiento de nuestro estudio de abogados es el resultado de una <br> trayectoria profesional altamente cualificada, por el trabajo eficiente, <br> la dedicación e integridad en los servicios prestados.
+                </p>
+                <p>
+                    Desde nuestros inicios, mantenemos un compromiso de continua superación, <br> lo que nos ha permitido <br>alcanzar la confianza y satisfacción <br> de nuestros clientes a través de los años.
+                </p>
             </div>
         </div>
     </section>   
