--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     <h2 class="subtitulo">ABOGADOS</h2>
     <section>
         <div class="container">
-            <div class="grid">
-                <img class="imagen" src="imagenes/DFGL-47.jpg" alt="fotoestudiodfgl">
+            <div class="grid-index">
+                <img class="imagen" src="imagenes/DFGL-47.jpg" height="350" width="500" alt="fotoestudiodfgl">
             </div>
             <div class="principal">
-                <p>
-                    El reconocimiento de nuestro estudio de abogados es el resultado de una <br> trayectoria profesional altamente cualificada, por el trabajo eficiente, <br> la dedicación e integridad en los servicios prestados.
-                </p>
-                <p>
-                    Desde nuestros inicios, mantenemos un compromiso de continua superación, <br> lo que nos ha permitido <br>alcanzar la confianza y satisfacción <br> de nuestros clientes a través de los años.
-                </p>
+                <p>El reconocimiento de nuestro estudio de abogados es el resultado de una </p> 
+                <p>trayectoria profesional altamente cualificada, por el trabajo eficiente, </p>
+                <p>la dedicación e integridad en los servicios prestados.</p>
+                <p>Desde nuestros inicios, mantenemos un compromiso de continua superación,</p> 
+                <p>lo que nos ha permitido alcanzar la confianza y satisfacción de </p>
+                <p>nuestros clientes a través de los años</p>
             </div>
         </div>
     </section>   
