--- a/pages/estudio.html
+++ b/pages/estudio.html
@@ -27,18 +27,13 @@
     
     <img  class="imagen_estudio" src="../imagenes/estudio.jpg" alt="imagen estudio" width="350" height="250">
     <div class="estudio">
-        <h3>Su misión es brindar asesoramiento legal, diseño, desarrollo y gestión de soluciones jurídicas
-            <br>
-            integrales para empresas e individuos, 
-            buscando los máximos estándares de excelencia.
-            <br>
-            Integran su cartera de clientes varias de las empresas nacionales y multinacionales
-            <br>
-            más importantes del país, así como fideicomisos e individuos de reconocida trayectoria.
-            <br>            
-            Integrado por un equipo de abogados especializados de larga trayectoria, amplia formación y
-            <br> 
-            experiencia en sus respectivas áreas de intervención.
+        <h3>
+            <p>Su misión es brindar asesoramiento legal, diseño, desarrollo y gestión de soluciones jurídicas</p>
+            <p>integrales para empresas e individuos, buscando los máximos estándares de excelencia.</p>
+            <p>Integran su cartera de clientes varias de las empresas nacionales y multinacionales</p>
+            <p>más importantes del país, así como fideicomisos e individuos de reconocida trayectoria.</p>
+            <p>Integrado por un equipo de abogados especializados de larga trayectoria, amplia</p>
+            <p>formación y experiencia en sus respectivas áreas de intervención.</p>
         </h3>
     </div>
 
