--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,13 +58,13 @@
             </div>
             
             <div class="col">
-                <div class="grid_contacto">
+                <div class="contacto_grid">
                     <div  class="transform-translate15"> 
                         <h3>OTRAS FORMAS DE CONTACTO</h3>
-                        <div>
+                        <div class="contacto_telefono">
                             <img src="../imagenes/telefono.png" alt="logotelefono" width="25" height="25"> <p> 54 351 4222722 | 4224169 </p>
                         </div>
-                        <div>
+                        <div class="contacto_direccion">
                             <img src="../imagenes/direccion.png" alt="logodireccion" width="30" height="30"><p> Gral. Alvear 81 - Piso 4 - Córdoba - CP 5000 </p>
                 
                         </div>
