--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>   
 
-    <div class="grid_footer">
+    <div class="footer_grid">
         <div class="footer">
             <img src="imagenes/telefono.png" alt="logotelefono" width="20" height="20"> 54 351 4222722 | 4224169      
             <img src="imagenes/direccion.png" alt="logodireccion" width="20" height="20"> Gral. Alvear 81 - Piso 4 - Córdoba - CP 5000      
