--- a/pages/areas.html
+++ b/pages/areas.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudio DFGL - Áreas</title>
+    <meta name="description" content=" Nos abocamos especialmente a las áreas de Derecho Civil, Derecho Comercial y Derecho Laboral" >
+    <meta name="keywords" content="Abogados, Estudio Jurídico, Civil, Comercial, Laboral, Áreas" >
+    <title>DFGL - Áreas</title>
     <link rel="stylesheet" href="../css/estilos.css">
     
 </head>
