--- a/pages/estudio.html
+++ b/pages/estudio.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudio DFGL - Estudio </title>
+    
+    <meta name="keywords" content="Abogados, Estudio Jurídico, Legal, Clientes, Representar, Estudio">
+    <title>DFGL - Estudio </title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <header class="header" href="css/estilos.css">
