--- a/pages/socios.html
+++ b/pages/socios.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudio DFGL - Socios</title>
+    <meta name="description" content=" En el Estudio  DELGADO | FERRER | GONZALEZ LEAHY contamos con un gran equipo para ayurdarlo en todo momento" >
+    <meta name="keywords" content="Abogados, Ferrer, Gonzalez Leahy, Delgado, Socios" >
+    <title>DFGL - Socios</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <header class="header" href="css/estilos.css">
