Entrega final parte 3

--- a/pages/socios.html
+++ b/pages/socios.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <header class="header" href="css/estilos.css">
-    <img src="../imagenes/logodfgl-removebg-preview.png" alt="logo"> 
+    <img class="logologo" src="../imagenes/logodfgl-removebg-preview.png" alt="logo"> 
+    <a href="#" class="hamburguesa">
+        -
+    </a>
+
    <nav class="nav">
         <ul class="lista">
             <li><a href="../index.html"> Inicio</a></li>
@@ -22,36 +26,40 @@
     </nav>
 </header>
 <body>
-    <h1> DELGADO | FERRER | GONZALEZ LEAHY</h1>
-    <h2>ABOGADOS</h2>
+    <h1 class="titulo" > DELGADO | FERRER | GONZALEZ LEAHY</h1>
+    <h2 class="subtitulo" >ABOGADOS</h2>
 
     <h2>SOCIOS</h2>
     <div class="socios">
-        <img src="../imagenes/socio1 - copia.jpg" alt="Socio1" width="200" height="300"> 
-        <br> 
-        <h5 class="nombre-socio">JOSÉ MARÍA GONZALEZ LEAHY</h5>
-        <br>
-        <div class="transform-translate" >
-            <img src="../imagenes/socio2.jpg" alt="Socio2" width="200" height="300">
+        <div class="socio1">
+            <img src="../imagenes/socio1 - copia.jpg" alt="Socio1" width="150" height="250"> 
             <br> 
-            <h5 class="nombre-socio">FRANCISCO JOSÉ GONZALEZ LEAHY </h5>
+            <h5 class="nombre-socio1">JOSÉ MARÍA <br> GONZALEZ LEAHY</h5>
+            <br>
+        </div>
+        <div class="transform-translate" >
+            <img src="../imagenes/socio2.jpg" alt="Socio2" width="150" height="250">
+            <br> 
+            <h5 class="nombre-socio">FRANCISCO JOSÉ <br> GONZALEZ LEAHY </h5>
         </div>    
         <div class="transform-translate1">
-            <img src="../imagenes/socio3.jpg" alt="Socio3" width="200" height="300"> 
+            <img src="../imagenes/socio3.jpg" alt="Socio3" width="150" height="250"> 
             <br>
-            <h5 class="nombre-socio">JUAN ANTONIO GONZALEZ LEAHY </h5>
+            <h5 class="nombre-socio">JUAN ANTONIO <br> GONZALEZ LEAHY </h5>
             <br>
         </div>
         <div class="transform-translate2">
-            <img src="../imagenes/socio4.jpg" alt="Socio4" width="200" height="300">
+            <img src="../imagenes/socio4.jpg" alt="Socio4" width="150" height="250">
             <br> 
             <h5 class="nombre-socio">FERNANDO FERRER </h5> 
         </div>
+        
     </div>
 
     <div class="transform-translate3">
         <h3>MIEMBROS</h3>
     </div>
+
     <div class="transform-translate4">
         <img  src="../imagenes/miembro1.jpg" alt="miembro1" width="100" height="150"> 
         <br>
