--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,8 +73,9 @@
                             <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="CORREO">
                         </div>
                         <div class="form-floating">
-                        MENSAJE <textarea class="form-control" placeholder="DEJE ACÁ SU MENSAJE" id="floatingTextarea2" style="height: 100px"></textarea>
-                            <label for="floatingTextarea2">  </label>
+                            <label for="floatingTextarea2"> MENSAJE </label>
+                            <input textarea class="form-control" placeholder="DEJE ACÁ SU MENSAJE" id="floatingTextarea2" style="height: 100px"></input>
+                            
                         </div>
 
                         <div class="d-grid gap-2">
