--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-light navbar-main">
             <div class="container">
                 <a href="#" class="navbar-brand logo">
-                    <img class="logologo" src="/imagenes/logodfgl-removebg-preview.png" alt="logo"> 
+                    <img class="logologo" src="imagenes/logodfgl-removebg-preview.png" alt="logo"> 
                 </a>
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item ms-auto">
-                            <a class="nav-link active" href="../index.html"> Inicio </a>
+                            <a class="nav-link active" href="/index.html"> Inicio </a>
                         </li>
                         <li class="nav-item ms-auto">
                             <a class="nav-link" href="pages/estudio.html"> Estudio </a>
@@ -55,7 +55,7 @@
     <section>
 
         <div class="card mb-3">
-            <img src="/imagenes/DFGL-49.jpg" class="card-img-top" alt="fotoestudiodfgl" >
+            <img src="imagenes/DFGL-49.jpg" class="card-img-top" alt="fotoestudiodfgl" >
             <div class="card-body-index">
               <p class="card-text">El reconocimiento de nuestro estudio de abogados es el resultado de una 
                 trayectoria profesional altamente cualificada,</p> <p> por el trabajo eficiente, 
