--- a/pages/socios.html
+++ b/pages/socios.html
@@ -28,16 +28,16 @@
                             <a class="nav-link active" href="/index.html"> Inicio </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/estudio.html"> Estudio </a>
+                            <a class="nav-link" href="/pages/estudio.html"> Estudio </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/socios.html"> Socios </a>
+                            <a class="nav-link" href="/pages/socios.html"> Socios </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/areas.html"> Áreas </a>
+                            <a class="nav-link" href="/pages/areas.html"> Áreas </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/contacto.html"> Contacto </a>
+                            <a class="nav-link" href="/pages/contacto.html"> Contacto </a>
                         </li>
                     </ul>
                 </div>
@@ -54,7 +54,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
               <div class="card">
-                <img src="imagenes/socio1.jpg" class="card-img-top" alt="Socio1">
+                <img src="/imagenes/socio1.jpg" class="card-img-top" alt="Socio1">
                 <div class="card-body">
                   <h5 class="card-title-socio">JOSÉ MARÍA GONZALEZ LEAHY </h5>
                   <p class="card-text">
@@ -65,7 +65,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="imagenes/socio2.jpg" class="card-img-top" alt="socio2">
+                <img src="/imagenes/socio2.jpg" class="card-img-top" alt="socio2">
                 <div class="card-body">
                   <h5 class="card-title-socio">FRANCISCO JOSÉ GONZALEZ LEAHY </h5>
                   <p class="card-text"> Recidido de la Universidad Nacional de Córdoba - Facultad de Derecho</p>
@@ -75,7 +75,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="imagenes/socio3.jpg" class="card-img-top" alt="socio3">
+                <img src="/imagenes/socio3.jpg" class="card-img-top" alt="socio3">
                 <div class="card-body">
                   <h5 class="card-title-socio">JUAN ANTONIO GONZALEZ LEAHY </h5>
                   <p class="card-text">Recidido de la Universidad Nacional de Córdoba - Facultad de Derecho</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="imagenes/socio4.jpg" class="card-img-top" alt="socio4">
+                <img src="/imagenes/socio4.jpg" class="card-img-top" alt="socio4">
                 <div class="card-body">
                   <h5 class="card-title-socio">FERNANDO FERRER</h5>
                   <p class="card-text">Recidido de la Universidad Nacional de Córdoba - Facultad de Derecho </p>
@@ -102,22 +102,22 @@
         </nav>
         <div class="card-group">
             <div class="card">
-              <img src="imagenes/miembro1.jpg" class="card-img-top" alt="miembro1" width="100" height="350">
+              <img src="/imagenes/miembro1.jpg" class="card-img-top" alt="miembro1" width="100" height="350">
               <div class="card-body">
                 <h5 class="card-title">CESAR DELGADO</h5></div>
             </div>
             <div class="card">
-              <img src="imagenes/miembro2.jpg" class="card-img-top" alt="miembro2" width="100" height="350">
+              <img src="/imagenes/miembro2.jpg" class="card-img-top" alt="miembro2" width="100" height="350">
               <div class="card-body">
                 <h5 class="card-title">AGUSTINA FERRER</h5></div>
             </div>
             <div class="card">
-              <img src="imagenes/miembro3.jpg" class="card-img-top" alt="miembro3" width="100" height="350">
+              <img src="/imagenes/miembro3.jpg" class="card-img-top" alt="miembro3" width="100" height="350">
               <div class="card-body">
                 <h5 class="card-title">HUGO MAGRINI</h5></div>
             </div>
             <div class="card">
-                <img src="imagenes/miembro4.jpg" class="card-img-top" alt="miembro4" width="100" height="350">
+                <img src="/imagenes/miembro4.jpg" class="card-img-top" alt="miembro4" width="100" height="350">
                 <div class="card-body">
                   <h5 class="card-title">PAZ SANCHEZ</h5></div>
             </div>
@@ -125,22 +125,22 @@
 
         <div class="card-group">
             <div class="card">
-              <img src="imagenes/miembro5.jpg" class="card-img-top" alt="miembro" width="100" height="350">
+              <img src="/imagenes/miembro5.jpg" class="card-img-top" alt="miembro" width="100" height="350">
               <div class="card-body">
                 <h5 class="card-title">GUILLERMO PARERA</h5></div>
             </div>
             <div class="card">
-              <img src="imagenes/miembro6.jpg" class="card-img-top" alt="miembro6" width="100" height="350">
+              <img src="/imagenes/miembro6.jpg" class="card-img-top" alt="miembro6" width="100" height="350">
               <div class="card-body">
                 <h5 class="card-title">MARÍA LOPEZ</h5></div>
             </div>
             <div class="card">
-              <img src="imagenes/miembro7.jpg" class="card-img-top" alt="miembro7" width="100" height="350">
+              <img src="/imagenes/miembro7.jpg" class="card-img-top" alt="miembro7" width="100" height="350">
               <div class="card-body">
                 <h5 class="card-title">FEDERICO RODRIGUEZ DEL POZO</h5></div>
             </div>
             <div class="card">
-                <img src="imagenes/miembro8.jpg" class="card-img-top" alt="miembro8" width="100" height="350">
+                <img src="/imagenes/miembro8.jpg" class="card-img-top" alt="miembro8" width="100" height="350">
                 <div class="card-body">
                   <h5 class="card-title">JOSEFINA BUTELER</h5></div>
             </div>
