--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                             <a class="nav-link active" href="/index.html"> Inicio </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/estudio.html"> Estudio </a>
+                            <a class="nav-link" href="/pages/estudio.html"> Estudio </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/socios.html"> Socios </a>
+                            <a class="nav-link" href="/pages/socios.html"> Socios </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/areas.html"> Áreas </a>
+                            <a class="nav-link" href="/pages/areas.html"> Áreas </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="pages/contacto.html"> Contacto </a>
+                            <a class="nav-link" href="/pages/contacto.html"> Contacto </a>
                         </li>
                     </ul>
                 </div>
