--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,10 +92,10 @@
 
     <div class="otras-formas">
         <div class="row">
-            <h3>OTRAS FORMAS DE CONTACTO</h3>
+            <h3 class="otras-formas-text">OTRAS FORMAS DE CONTACTO</h3>
             <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
+              <div class="card-contacto">
+                <div class="card-body-telefono">
                   <img src="../imagenes/telefono.png" class="rounded mx-auto d-block" alt="icono-telefono" width="25" height="25">
                   <h5 class="card-title">TELÉFONO</h5>
                   <p class="card-text"> + 54 351 4222722 | 4224169 </p>
@@ -103,9 +103,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
+            <div class="col-sm-62">
+              <div class="card-contacto-direc">
+                <div class="card-body-direccion">
                   <img src="../imagenes/direccion.png" class="rounded mx-auto d-block" alt="icono-direccion" width="30" height="30">
                   <h5 class="card-title">DIRECCIÓN</h5>
                   <p class="card-text"> Gral. Alvear 81 - Piso 4 - Córdoba - CP 5000 </p>
