--- a/pages/socios.html
+++ b/pages/socios.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-md navbar-light navbar-main">
             <div class="container">
                 <a href="#" class="navbar-brand logo">
-                    <img class="logologo" src="/imagenes/logodfgl-removebg-preview.png" alt="logo"> 
+                    <img class="logologo" src="../imagenes/logodfgl-removebg-preview.png" alt="logo"> 
                 </a>
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,19 +25,19 @@
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item ms-auto">
-                            <a class="nav-link active" href="/index.html"> Inicio </a>
+                            <a class="nav-link active" href="../index.html"> Inicio </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="/pages/estudio.html"> Estudio </a>
+                            <a class="nav-link" href="estudio.html"> Estudio </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="/pages/socios.html"> Socios </a>
+                            <a class="nav-link" href="socios.html"> Socios </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="/pages/areas.html"> Áreas </a>
+                            <a class="nav-link" href="areas.html"> Áreas </a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link" href="/pages/contacto.html"> Contacto </a>
+                            <a class="nav-link" href="contacto.html"> Contacto </a>
                         </li>
                     </ul>
                 </div>
